# codechallenge-contextual-backend

./: .env.example  .gitignore  README.md  celerybeat-schedule.db  compose.yml  pyproject.toml
analytics/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
analytics/migrations/: 0001_initial.py
analytics/tests/: view_tests.py
common/: messages.py  web_keys.py
common/serializer/: base.py
common/utils/: math_util.py  random_util.py
core/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: admin.py  models.py  serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
dashboard/tests/: model_tests.py  view_tests.py
